# pyrs

./: README.md  pyproject.toml  setup.cfg  setup.py  test.py  test.rs
pyrs/: __main__.py  cli.py  clike.py  transpiler.py
