[metadata]
name = python-rs
author = Julian Konchunas
author_email = konchunas@gmail.com
license = MIT
description = Python to Rust transpiler.
url = http://github.com/konchunas/pyrs
long_description =
    Python to Rust transpiler

    This project started as Python to Rust syntax converter. It is not
    aimed at producing ready-to-compile code, but some basic stuff can be
    compiled easily.

    It generates unidiomatic non-optimized code with unnecessary
    allocations, but can reduce amount of edits you have to do when
    porting Python projects.

    Only basic subset of Python is supported right now and the end goal is
    to support common cases at least as a placeholders.

    The project is in experimental, so it may crash or silently skip some
    statements, so be careful.

    Based on Lukas Martinelli Py14
    (https://github.com/lukasmartinelli/py14) and Py14/python-3
    (https://github.com/ProgVal/py14/tree/python-3) branch by Valentin
    Lorentz.

classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = pyrs
python_requires = >=3.0.0
test_suite = tests
tests_require = pytest

[options.entry_points]
console_scripts = pyrs=pyrs.cli:main

[aliases]
test = pytest

